# CCleaner

./: .gitignore  CMakeLists.txt  README.md  generate_vs.bat
source/: main.cpp
source/app/: app.cpp  app.hpp
source/common/: browser_info.hpp  cleaner_info.hpp  constants.hpp  id_generator.hpp  scoped_guards.hpp
source/core/: system_cleaner.cpp  system_cleaner.hpp  task_manager.cpp  task_manager.hpp  texture_manager.cpp  texture_manager.hpp  window.cpp  window.hpp
source/gui/: gui.cpp  gui.hpp
source/gui/widgets/: cleaner_panel.cpp  cleaner_panel.hpp  title_bar.cpp  title_bar.hpp  widget.hpp
source/shared/: browser_info.hpp
source/utils/: dialogs.cpp  dialogs.hpp  filesystem.cpp  filesystem.hpp  task_manager.cpp  task_manager.hpp
